@@ -1,3 +1,6 @@
+2011-12-31   D. V. Wiebe <getdata@ketiltrout.net> svn:643
+	* bindings/python/pyentry.c (gdpy_set_entry_from_dict): Add missing INCREF.
+
 2011-12-29   D. V. Wiebe <getdata@ketiltrout.net> svn:641
 	* src/internal.h src/encoding.c (_GD_GenericName): Added fragment->enc_data.
 	Pass enc_data to gd_ef->name.  Flag encodings that use enc_data with
